refactored the code and bug fix regarding fdr cutoff

--- a/src/app/gene-llm/components/configuration-component/configuration-component.component.scss
+++ b/src/app/gene-llm/components/configuration-component/configuration-component.component.scss
@@ -15,11 +15,14 @@
     padding-right: 10px;
   }
 
-  // .card-style {
-  //   width: 40vw;
-  //   height: 40vh;
-  //   background-color: var(--primary-container);
-  //   align-items: center;
-  //   left: 400px;
-  // }
+  .reset-button {
+    box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2); /* Adds a subtle shadow */
+    transition: box-shadow 0.3s ease; /* Smooth transition for hover effect */
+    margin-bottom: 10px;
+}
+
+.reset-button:hover {
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3); /* Slightly larger shadow on hover */
+}
+
 
